--- a/Paginas/hombre.html
+++ b/Paginas/hombre.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <nav class="vinculos">
-                <a href="../Index.html">Inicio</a>
+                <a href="../index.html">Inicio</a>
                 <a href="./Mujer.html">Mujer</a>
                 <a href="./ayuda.html">Ayuda</a>
             </nav>
