--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <nav class="vinculos">
-            <a href="./mujer.html">Mujer</a>
-            <a href="./hombre.html">Hombre</a>
-            <a href="./ayuda.html">Ayuda</a>
+            <a href="./Paginas/mujer.html">Mujer</a>
+            <a href="./Paginas/hombre.html">Hombre</a>
+            <a href="./Paginas/ayuda.html">Ayuda</a>
         </nav>
         <h1 class="titulo">Musa accesorios</h1>
         <h3 class="subtitulo">Inicio</h3>
@@ -66,7 +66,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/xvkL9tTx1S4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <footer class="pieDePag">
-        <a href="./ayuda.html">Ayuda</a>
+        <a href="./Paginas/ayuda.html">Ayuda</a>
         <div class="iconos">
         <a target="_blank" href="https://www.instagram.com/"><img src="../Imagenes/iconoInstagram.png" alt="Instagram"></a>
         <a target="_blank" class="iconoTwitter" href="https://twitter.com/i/flow/login"><img src="../Imagenes/iconoTwitter.png" alt="Twitter"></a>
