Estilo en el index

--- a/Paginas/ayuda.html
+++ b/Paginas/ayuda.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="vinculos">
                 <a href="../index.html">Inicio</a>
-                <a href="./Hombre.html">Hombre</a>
+                <a href="./hombre.html">Hombre</a>
                 <a href="./Mujer.html">Mujer</a>
         </nav>
         <h1 class="titulo">Musa accesorios</h1>
