Estilo en el index

--- a/Paginas/hombre.html
+++ b/Paginas/hombre.html
@@ -12,8 +12,8 @@
         <header>
             <nav class="vinculos">
                 <a href="../index.html">Inicio</a>
-                <a href="./Mujer.html">Mujer</a>
-                <a href="./ayuda.html">Ayuda</a>
+                <a href="mujer.html">Mujer</a>
+                <a href="ayuda.html">Ayuda</a>
             </nav>
             <h1 class="titulo">Musa accesorios</h1>
             <h3 class="subtitulo">Hombre</h3>
@@ -57,7 +57,7 @@
             </div>
         </div>
         <footer class="pieDePag">
-            <a href="./ayuda.html">Ayuda</a>
+            <a href="ayuda.html">Ayuda</a>
                 <div class="iconos">
                     <a target="_blank" href="https://www.instagram.com/"><img src="../Imagenes/iconoInstagram.png" alt="Instagram">
                     <a target="_blank" class="iconoTwitter" href="https://twitter.com/i/flow/login"><img src="../Imagenes/iconoTwitter.png" alt="Twitter">
