--- a/Paginas/ayuda.html
+++ b/Paginas/ayuda.html
@@ -11,8 +11,8 @@
     <header>
         <nav class="vinculos">
                 <a href="../index.html">Inicio</a>
-                <a href="./hombre.html">Hombre</a>
-                <a href="./Mujer.html">Mujer</a>
+                <a href="hombre.html">Hombre</a>
+                <a href="mujer.html">Mujer</a>
         </nav>
         <h1 class="titulo">Musa accesorios</h1>
         <h3 class="subtitulo">Ayuda</h3>
