--- a/Paginas/mujer.html
+++ b/Paginas/mujer.html
@@ -13,8 +13,8 @@
     <header>
         <nav class="vinculos">          
             <a href="../index.html">Inicio</a>
-            <a href="./Hombre.html">Hombre</a>
-            <a href="./ayuda.html">Ayuda</a>          
+            <a href="hombre.html">Hombre</a>
+            <a href="ayuda.html">Ayuda</a>          
         </nav>
         <h1 class="titulo">Musa accesorios</h1>
         <h3 class="subtitulo">Mujer</h3>
