--- a/Paginas/ayuda.html
+++ b/Paginas/ayuda.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../node_modules/SCSS/Style.scss">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda</title>
@@ -14,7 +15,7 @@
                 <a href="hombre.html">Hombre</a>
                 <a href="mujer.html">Mujer</a>
         </nav>
-        <h1 class="titulo">Musa accesorios</h1>
+        <h1 class="titulo">Musa deportes</h1>
         <h3 class="subtitulo">Ayuda</h3>
     </header>
     <main>
