--- a/Paginas/hombre.html
+++ b/Paginas/hombre.html
@@ -2,9 +2,12 @@
 <html lang="es">
     <head>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../node_modules/SCSS/Style.scss">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Hombre</title>
+        <meta name="description" content="Explora nuestra colección de zapatillas para hombres. Encuentra una amplia gama de estilos de calzado masculino, desde deportivas hasta casuales y elegantes. Variedad de tallas disponibles. ¡Camina con confianza y estilo con nuestras zapatillas de moda para hombres!">
+        <title>Zapatillas de Moda para Hombres | Encuentra tu Estilo Perfecto | Tienda MUSA</title>
+    </title>
         <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     </head>
@@ -15,22 +18,23 @@
                 <a href="mujer.html">Mujer</a>
                 <a href="ayuda.html">Ayuda</a>
             </nav>
-            <h1 class="titulo">Musa accesorios</h1>
+            <h1 class="titulo">Musa deportes</h1>
             <h3 class="subtitulo">Hombre</h3>
         </header>
         <main>
             <div class="contenedorFlexTexto">
                 <!--Foto numero UNO-->
                 <img src="../Imagenes/zapatillasJordan.jpg" class="imagenGrande" alt="Zapatillas Jordan">
-                <p class="caja">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi adipisci amet illum autem dicta nostrum perspiciatis suscipit, incidunt eaque aliquam? ipsum dolor sit amet consectetur adipisicing elit. Commodi non sunt ipsa amet obcaecati cumque, sit molestias nostrum impedit unde! <button class="botonComprar">Agregar al carrito</button></p>
+                <p class="caja">Domina la cancha con las zapatillas de baloncesto Nike. Diseñadas para desafiar los límites, ofrecen el ajuste perfecto, tracción inigualable y amortiguación superior. Desde cambios rápidos hasta saltos explosivos, Nike te impulsa hacia la victoria en cada partido 
+                <button class="botonComprar">Agregar al carrito</button></p>
             </div>
             <!--Foto numero DOS-->
-            <h3 class="subtituloIzq">Lorem ipsum dolor sit amet.</h3>
+            <h3 class="subtituloIzq">Brilla en el Campo: Los Botines Dorados de la Victoria.</h3>
             <img src="../Imagenes/BotinesFutbolMessi.jpg" class="imagenMedianaEstatica sombra" alt="Botines Messi">
-            <p class="caja">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, aut vitae magni veniam ullam ad recusandae officiis quia quod nemo asperiores sunt labore facere, expedita pariatur ex facilis, deserunt quae!</p>
+            <p class="caja">Descubre la excelencia en el campo con nuestros botines dorados, la elección distintiva de Lionel Messi en un emocionante partido. Estos botines encapsulan estilo y rendimiento, brindando un toque de lujo a tu juego. Inspirados por el ícono del fútbol, ofrecen una combinación perfecta de agilidad y precisión. Domina el terreno con el resplandor de la victoria, al igual que Messi en cada zancada.</p>
             <button class="botonComprar">Agregar al carrito</button>
             <!--Foto numero TRES-->
-            <h3 class="titulo">Lorem ipsum dolor sit amet.</h3>
+            <h3 class="titulo">Leyendas en Confrontación: Michael Jordan vs. LeBron James por el Trono del Basket.</h3>
             <div class="contenedorFlex">
                 <div>  
                     <img src="../Imagenes/ZapatillasMJ.jpg" class="imagenMedianaEstaticaB" alt="Zapatillas MJ Partido">
@@ -42,11 +46,13 @@
                 </div>
             </div>
             <div class="centro">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, veritatis provident, natus, autem voluptatem impedit voluptates ipsa ipsam suscipit nemo eligendi. Voluptatem id voluptas dignissimos dolorum accusantium provident exercitationem explicabo molestiae repudiandae, tempore tempora nobis magnam ratione, voluptate nesciunt odio.        
+            <p>Las zapatillas Jordan, conocidas por su legado histórico y estilo audaz, ofrecen un ajuste aerodinámico y una amortiguación receptiva que resalta en la cancha. Con diseños emblemáticos y tecnología de vanguardia, brindan agilidad y apoyo en cada paso.
+
+                Por otro lado, las zapatillas LeBron presentan una fusión de rendimiento y comodidad. Diseñadas para la potencia y la versatilidad de LeBron James, cuentan con amortiguación impactante y soporte lateral para movimientos dinámicos. Estas zapatillas destacan por su adaptabilidad en diversos estilos de juego.        
                 <button class="botonComprar">Agregar al carrito</button>
             </div>
         </main>
-        <h2 class="titulo">David Goggins</h2>
+        <h2 class="titulo">David Goggins; They don´t know me.</h2>
         <div>
         <div class="grid">
             <img class="img1" src="../Imagenes/gogginsTronco.jpg" alt="Goggins levantando un tronco.">
