--- a/Paginas/mujer.html
+++ b/Paginas/mujer.html
@@ -2,9 +2,14 @@
 <html lang="es">
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../node_modules/SCSS/Style.scss">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mujer</title>
+    <meta name="description" content="Descubre nuestra selección de zapatillas para mujeres. Encuentra los últimos estilos de calzado femenino para todos los gustos y ocasiones. Desde zapatillas deportivas hasta opciones elegantes y casuales. Envíos rápidos y variedad de tallas disponibles. ¡Camina con confianza y estilo!">
+  <meta name="keywords" content="zapatillas de mujer, calzado femenino, moda femenina, estilo, tendencias, zapatillas deportivas">
+  <meta name="author" content="Musa deportes">
+    <title>Zapatillas de Moda para Mujeres | Encuentra tu Estilo Perfecto | Tienda MUSA</title>
+</title>
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
@@ -16,25 +21,27 @@
             <a href="hombre.html">Hombre</a>
             <a href="ayuda.html">Ayuda</a>          
         </nav>
-        <h1 class="titulo">Musa accesorios</h1>
+        <h1 class="titulo">Musa deportes</h1>
         <h3 class="subtitulo">Mujer</h3>
     </header>
     <main>
         <div class="contenedor">
-            <h3 class="titulo">Lorem ipsum dolor sit amet ipsum.</h3>
+            <h3 class="titulo"> Estilo en Movimiento: Indumentaria Deportiva para Todas las Actividades</h3>
             <img src="../Imagenes/Deporte.Jpg" class="imagenGrandeEstatica" data-aos-once="false" data-aos="flip-up" alt="Foto de Atletas">
             <!--Foto numero UNO-->
             <img src="../Imagenes/BotinesFutbol.jpg" class="imagenMediana imagenMedianaRedondeada agrandar" alt="Botines de futbol">
-            <p class="caja mujertexto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod, maiores? ipsum dolor, sit amet consectetur adipisicing elit. Modi illo tempora accusantium illum facere fuga hic voluptate accusamus quas enim!</p>
+            <p class="caja mujertexto">"Domina el campo con estos botines de fútbol de alto rendimiento en un vibrante color amarillo. Diseñados para destacar en la cancha, estos botines te brindarán el confort y el control que necesitas para brillar en cada jugada.
+
+                El espíritu de la pasión futbolística se fusiona con el estilo audaz de Boca Juniors en esta edición especial. Imagina cada paso en los colores emblemáticos mientras la imagen de una jugadora del equipo Boca Juniors usa estos botines, sintiendo la energía y la determinación que caracterizan a uno de los equipos más icónicos del fútbol.</p>
             <button class="botonComprar">Agregar al carrito</button>
         </div>
         <!--Foto numero DOS, TRES Y CUATRO-->
         <div class="contenedor" data-aos="fade-right" data-aos-once="true">
-            <h3 class="subtituloIzq">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+            <h3 class="subtituloIzq">Alcanza tus Metas como Goggins: Zapatillas de Alto Rendimiento</h3>
             <img src="../Imagenes/Zapatillas2.jpg" class="imagenMedianaRedondeada" alt="Zapatillas2">
             <img src="../Imagenes/Zapatillas.jpg" class="imagenMedianaRedondeada" alt="zapatillas">
             <img src="../Imagenes/Zapatillas3.jpg" class="imagenMedianaRedondeada" alt="Zapatillas3">
-            <p class="caja mujertexto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tempora neque quod nulla ipsa voluptatum dolores blanditiis, nemo alias reiciendis reprehenderit natus minus adipisci sequi quae asperiores quasi! Nobis, facilis!</p>
+            <p class="caja mujertexto">"Las zapatillas que llevaron a David Goggins a conquistar desafíos extremos, ahora te inspirarán en tus propias metas de running."</p>
             <button class="botonComprar">Agregar al carrito</button>
         </div>
     </main>
@@ -44,7 +51,7 @@
                 <div class="Frente"></div>
                 <div class="Detras">
                     <h2>Serena Williams</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore nobis necessitatibus ducimus possimus? Ipsum ab et delectus reprehenderit, culpa illo. ipsum dolor sit amet.</p>
+                    <p>Serena Williams es una icónica tenista profesional estadounidense, considerada una de las mejores de todos los tiempos. Con numerosos títulos de Grand Slam, su dominio en la cancha y su influencia trascienden el deporte.</p>
                 </div>
             </div>
         </div>
@@ -53,7 +60,7 @@
                 <div class="Frente2"></div>
                 <div class="Detras">
                     <h2>Messi</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore nobis necessitatibus ducimus possimus? Ipsum ab et delectus reprehenderit, culpa illo. ipsum dolor sit amet.</p>
+                    <p>Lionel Messi, conocido como "Messi", es un futbolista argentino de renombre mundial. Considerado uno de los mejores jugadores de fútbol de todos los tiempos, ha ganado múltiples títulos y premios, destacando por su habilidad, visión de juego y capacidad goleadora.</p>
                 </div>
             </div>
         </div>
