--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../node_modules/SCSS/Style.scss">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <meta name="description" content="Explora nuestra colección de zapatillas de alta calidad para todos los estilos y ocasiones. Encuentra las últimas tendencias en calzado deportivo, casual y más. Envíos rápidos y opciones de tallas disponibles. ¡Camina con estilo y comodidad!">
+    <meta name="keywords" content="zapatillas, calzado, moda, deporte, estilo, tendencias">
+    <meta name="author" content="Musa deportes">
+    <title>Zapatillas de moda, encontra tu estilo.</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./Paginas/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300&display=swap" rel="stylesheet">
@@ -16,7 +20,7 @@
             <a href="./Paginas/hombre.html">Hombre</a>
             <a href="./Paginas/ayuda.html">Ayuda</a>
         </nav>
-        <h1 class="titulo">Musa accesorios</h1>
+        <h1 class="titulo">Musa deportes</h1>
         <h3 class="subtitulo">Inicio</h3>
     </header>
     <main>
@@ -46,23 +50,23 @@
                 </div>
             </section>
             <!--Foto numero DOS-->
-            <h3 class="subtituloIzq">Lorem ipsum dolor sit amet.</h3>
-            <a href="./hombre.html"><img data-aos="fade-down-left" src="../Imagenes/ZapatillasMJ.jpg" class="imagenGrande" alt="Zapatillas MJ Partido"></a>
-            <p class="caja">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, veritatis provident, natus, autem voluptatem impedit voluptates ipsa ipsam suscipit nemo eligendi. Voluptatem id voluptas dignissimos dolorum accusantium provident exercitationem explicabo molestiae repudiandae, tempore tempora nobis magnam ratione, voluptate nesciunt odio. <a href="/Paginas/hombre.html">
+            <h3 class="subtituloIzq">Las mejores de todos los tiempos.</h3>
+            <a href="./hombre.html"><img class="imagenGrande" data-aos="fade-down-left" src="../Imagenes/ZapatillasMJ.jpg"  alt="Zapatillas MJ Partido"></a>
+            <p class="caja">Sumérgete en el legendario mundo del baloncesto con nuestras exclusivas zapatillas inspiradas en la icónica Michael Jordan. Cada paso te conectará con la grandeza que definió una era del deporte. Diseñadas meticulosamente para capturar su estilo distintivo y su habilidad innata, estas zapatillas no solo son un homenaje a la leyenda, sino también una declaración de tu pasión por el juego. <a href="/Paginas/hombre.html">
                 <button class="botonComprar">Ver mas</button></a>
             </p>           
             <!--Foto numero TRES, CUATRO Y CINCO-->
-            <h3 class="subtituloIzq">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+            <h3 class="subtituloIzq">Eleva tu Pasión por Correr: Descubre Nuestras Zapatillas de Correr de Alto Rendimiento.</h3>
             <a href="./mujer.html"><img src="../Imagenes/Zapatillas2.jpg" class="imagenMedianaRedondeada imagenMediana" alt="Zapatillas2"></a>
             <a href="./mujer.html"><img src="../Imagenes/Zapatillas.jpg" class="imagenMedianaRedondeada imagenMediana" alt="zapatillas"></a>
             <a href="./mujer.html"><img src="../Imagenes/Zapatillas3.jpg" class="imagenMedianaRedondeada imagenMediana" alt="zapatillas3"></a>
-            <p class="caja">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tempora neque quod nulla ipsa voluptatum dolores blanditiis, nemo alias reiciendis reprehenderit natus minus adipisci sequi quae asperiores quasi! Nobis, facilis!</p>
+            <p class="caja">Recorre Kilómetros con Comodidad y Estilo. Diseñadas para Potenciar tu Rendimiento en Cada Zancada. Encuentra tu Par Perfecto Hoy.</p>
         </div>
     </main>
 
     <!--VIDEO-->
     <div class="contenedorVideo" data-aos="flip-up">
-        <h3 class="subtituloIzq">Lorem ipsum dolor sit.</h3>
+        <h3 class="subtituloIzq">Top 10 zapatillas de nuestros especialistas.</h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/xvkL9tTx1S4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <footer class="pieDePag">
