--- a/Paginas/mujer.html
+++ b/Paginas/mujer.html
@@ -30,19 +30,23 @@
             <img src="../Imagenes/Deporte.Jpg" class="imagenGrandeEstatica" data-aos-once="false" data-aos="flip-up" alt="Foto de Atletas">
             <!--Foto numero UNO-->
             <img src="../Imagenes/BotinesFutbol.jpg" class="imagenMediana imagenMedianaRedondeada agrandar" alt="Botines de futbol">
-            <p class="caja mujertexto">"Domina el campo con estos botines de fútbol de alto rendimiento en un vibrante color amarillo. Diseñados para destacar en la cancha, estos botines te brindarán el confort y el control que necesitas para brillar en cada jugada.
-
-                El espíritu de la pasión futbolística se fusiona con el estilo audaz de Boca Juniors en esta edición especial. Imagina cada paso en los colores emblemáticos mientras la imagen de una jugadora del equipo Boca Juniors usa estos botines, sintiendo la energía y la determinación que caracterizan a uno de los equipos más icónicos del fútbol.</p>
-            <button class="botonComprar">Agregar al carrito</button>
+            <p class="caja mujertexto">Domina el campo con estos botines de fútbol de alto rendimiento en un vibrante color amarillo. Diseñados para destacar en la cancha, estos botines te brindarán el confort y el control que necesitas para brillar en cada jugada.El espíritu de la pasión futbolística se fusiona con el estilo audaz de Boca Juniors en esta edición especial. Imagina cada paso en los colores emblemáticos mientras la imagen de una jugadora del equipo Boca Juniors usa estos botines, sintiendo la energía y la determinación que caracterizan a uno de los equipos más icónicos del fútbol.</p>
+            <div class="botonCentro">
+                <button class="botonComprar">Agregar al carrito</button>
+            </div>
         </div>
         <!--Foto numero DOS, TRES Y CUATRO-->
         <div class="contenedor" data-aos="fade-right" data-aos-once="true">
             <h3 class="subtituloIzq">Alcanza tus Metas como Goggins: Zapatillas de Alto Rendimiento</h3>
-            <img src="../Imagenes/Zapatillas2.jpg" class="imagenMedianaRedondeada" alt="Zapatillas2">
-            <img src="../Imagenes/Zapatillas.jpg" class="imagenMedianaRedondeada" alt="zapatillas">
-            <img src="../Imagenes/Zapatillas3.jpg" class="imagenMedianaRedondeada" alt="Zapatillas3">
+            <div class="contenedor3img"></div>
+                <img src="../Imagenes/Zapatillas2.jpg" class="imagenMedianaRedondeada imagenMediana" alt="Zapatillas2">
+                <img src="../Imagenes/Zapatillas.jpg" class="imagenMedianaRedondeada imagenMediana" alt="zapatillas">
+                <img src="../Imagenes/Zapatillas3.jpg" class="imagenMedianaRedondeada imagenMediana" alt="Zapatillas3">
+            </div>
             <p class="caja mujertexto">"Las zapatillas que llevaron a David Goggins a conquistar desafíos extremos, ahora te inspirarán en tus propias metas de running."</p>
-            <button class="botonComprar">Agregar al carrito</button>
+            <div class="botonCentro">
+                <button class="botonComprar">Agregar al carrito</button>
+            </div>
         </div>
     </main>
     <section class="ContenedorBorde">   
