--- a/index.html
+++ b/index.html
@@ -53,21 +53,25 @@
             <h3 class="subtituloIzq">Las mejores de todos los tiempos.</h3>
             <a href="./hombre.html"><img class="imagenGrande" data-aos="fade-down-left" src="../Imagenes/ZapatillasMJ.jpg"  alt="Zapatillas MJ Partido"></a>
             <p class="caja">Sumérgete en el legendario mundo del baloncesto con nuestras exclusivas zapatillas inspiradas en la icónica Michael Jordan. Cada paso te conectará con la grandeza que definió una era del deporte. Diseñadas meticulosamente para capturar su estilo distintivo y su habilidad innata, estas zapatillas no solo son un homenaje a la leyenda, sino también una declaración de tu pasión por el juego. <a href="/Paginas/hombre.html">
+            <div class="botonCentro">  
                 <button class="botonComprar">Ver mas</button></a>
-            </p>           
+            </div> 
+            </p>       
             <!--Foto numero TRES, CUATRO Y CINCO-->
             <h3 class="subtituloIzq">Eleva tu Pasión por Correr: Descubre Nuestras Zapatillas de Correr de Alto Rendimiento.</h3>
-            <a href="./mujer.html"><img src="../Imagenes/Zapatillas2.jpg" class="imagenMedianaRedondeada imagenMediana" alt="Zapatillas2"></a>
-            <a href="./mujer.html"><img src="../Imagenes/Zapatillas.jpg" class="imagenMedianaRedondeada imagenMediana" alt="zapatillas"></a>
-            <a href="./mujer.html"><img src="../Imagenes/Zapatillas3.jpg" class="imagenMedianaRedondeada imagenMediana" alt="zapatillas3"></a>
-            <p class="caja">Recorre Kilómetros con Comodidad y Estilo. Diseñadas para Potenciar tu Rendimiento en Cada Zancada. Encuentra tu Par Perfecto Hoy.</p>
+            <div class="contenedor3img">
+                <a href="./mujer.html"><img src="../Imagenes/Zapatillas2.jpg" class="imagenMedianaRedondeada imagenMediana" alt="Zapatillas2"></a>
+                <a href="./mujer.html"><img src="../Imagenes/Zapatillas.jpg" class="imagenMedianaRedondeada imagenMediana" alt="zapatillas"></a>
+                <a href="./mujer.html"><img src="../Imagenes/Zapatillas3.jpg" class="imagenMedianaRedondeada imagenMediana" alt="zapatillas3"></a>
+            </div>
+                <p class="caja">Recorre Kilómetros con Comodidad y Estilo. Diseñadas para Potenciar tu Rendimiento en Cada Zancada. Encuentra tu Par Perfecto Hoy.</p>
         </div>
     </main>
 
     <!--VIDEO-->
     <div class="contenedorVideo" data-aos="flip-up">
         <h3 class="subtituloIzq">Top 10 zapatillas de nuestros especialistas.</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/xvkL9tTx1S4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe class="videoPerso" src="https://www.youtube.com/embed/xvkL9tTx1S4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <footer class="pieDePag">
         <a href="./Paginas/ayuda.html">Ayuda</a>
