--- a/Paginas/hombre.html
+++ b/Paginas/hombre.html
@@ -25,13 +25,13 @@
             <div class="contenedorFlexTexto">
                 <!--Foto numero UNO-->
                 <img src="../Imagenes/zapatillasJordan.jpg" class="imagenGrande" alt="Zapatillas Jordan">
-                <p class="caja">Domina la cancha con las zapatillas de baloncesto Nike. Diseñadas para desafiar los límites, ofrecen el ajuste perfecto, tracción inigualable y amortiguación superior. Desde cambios rápidos hasta saltos explosivos, Nike te impulsa hacia la victoria en cada partido 
+                <p class="caja textoResponsive">Domina la cancha con las zapatillas de baloncesto Nike. Diseñadas para desafiar los límites, ofrecen el ajuste perfecto, tracción inigualable y amortiguación superior. Desde cambios rápidos hasta saltos explosivos, Nike te impulsa hacia la victoria en cada partido 
                 <button class="botonComprar">Agregar al carrito</button></p>
             </div>
             <!--Foto numero DOS-->
             <h3 class="subtituloIzq">Brilla en el Campo: Los Botines Dorados de la Victoria.</h3>
             <img src="../Imagenes/BotinesFutbolMessi.jpg" class="imagenMedianaEstatica sombra" alt="Botines Messi">
-            <p class="caja">Descubre la excelencia en el campo con nuestros botines dorados, la elección distintiva de Lionel Messi en un emocionante partido. Estos botines encapsulan estilo y rendimiento, brindando un toque de lujo a tu juego. Inspirados por el ícono del fútbol, ofrecen una combinación perfecta de agilidad y precisión. Domina el terreno con el resplandor de la victoria, al igual que Messi en cada zancada.</p>
+            <p class="caja textoResponsive">Descubre la excelencia en el campo con nuestros botines dorados, la elección distintiva de Lionel Messi en un emocionante partido. Estos botines encapsulan estilo y rendimiento, brindando un toque de lujo a tu juego. Inspirados por el ícono del fútbol, ofrecen una combinación perfecta de agilidad y precisión. Domina el terreno con el resplandor de la victoria, al igual que Messi en cada zancada.</p>
             <div class="botonCentro">
                 <button class="botonComprar">Agregar al carrito</button>
             </div>
@@ -47,7 +47,7 @@
                     <img src="../Imagenes/ZapatillasLBJ.jpg" class="imagenMedianaEstaticaB" alt="LBJ">
                 </div>
             </div>
-            <p class="caja">Las zapatillas Jordan, conocidas por su legado histórico y estilo audaz, ofrecen un ajuste aerodinámico y una amortiguación receptiva que resalta en la cancha. Con diseños emblemáticos y tecnología de vanguardia, brindan agilidad y apoyo en cada paso.                    Por otro lado, las zapatillas LeBron presentan una fusión de rendimiento y comodidad. Diseñadas para la potencia y la versatilidad de LeBron James, cuentan con amortiguación impactante y soporte lateral para movimientos dinámicos. Estas zapatillas destacan por su adaptabilidad en diversos estilos de juego.       
+            <p class="caja textoResponsive">Las zapatillas Jordan, conocidas por su legado histórico y estilo audaz, ofrecen un ajuste aerodinámico y una amortiguación receptiva que resalta en la cancha. Con diseños emblemáticos y tecnología de vanguardia, brindan agilidad y apoyo en cada paso.                    Por otro lado, las zapatillas LeBron presentan una fusión de rendimiento y comodidad. Diseñadas para la potencia y la versatilidad de LeBron James, cuentan con amortiguación impactante y soporte lateral para movimientos dinámicos. Estas zapatillas destacan por su adaptabilidad en diversos estilos de juego.       
             <div class="botonCentro">  
                 <button class="botonComprar">Agregar al carrito</button>
             </div>
