--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!--Foto numero DOS-->
             <h3 class="subtituloIzq">Las mejores de todos los tiempos.</h3>
             <a href="./hombre.html"><img class="imagenGrande" data-aos="fade-down-left" src="../Imagenes/ZapatillasMJ.jpg"  alt="Zapatillas MJ Partido"></a>
-            <p class="caja">Sumérgete en el legendario mundo del baloncesto con nuestras exclusivas zapatillas inspiradas en la icónica Michael Jordan. Cada paso te conectará con la grandeza que definió una era del deporte. Diseñadas meticulosamente para capturar su estilo distintivo y su habilidad innata, estas zapatillas no solo son un homenaje a la leyenda, sino también una declaración de tu pasión por el juego. <a href="/Paginas/hombre.html">
+            <p class="caja textoResponsive">Sumérgete en el legendario mundo del baloncesto con nuestras exclusivas zapatillas inspiradas en la icónica Michael Jordan. Cada paso te conectará con la grandeza que definió una era del deporte. Diseñadas meticulosamente para capturar su estilo distintivo y su habilidad innata, estas zapatillas no solo son un homenaje a la leyenda, sino también una declaración de tu pasión por el juego. <a href="/Paginas/hombre.html">
             <div class="botonCentro">  
                 <button class="botonComprar">Ver mas</button></a>
             </div> 
@@ -64,7 +64,7 @@
                 <a href="./mujer.html"><img src="../Imagenes/Zapatillas.jpg" class="imagenMedianaRedondeada imagenMediana" alt="zapatillas"></a>
                 <a href="./mujer.html"><img src="../Imagenes/Zapatillas3.jpg" class="imagenMedianaRedondeada imagenMediana" alt="zapatillas3"></a>
             </div>
-                <p class="caja">Recorre Kilómetros con Comodidad y Estilo. Diseñadas para Potenciar tu Rendimiento en Cada Zancada. Encuentra tu Par Perfecto Hoy.</p>
+                <p class="caja textoResponsive">Recorre Kilómetros con Comodidad y Estilo. Diseñadas para Potenciar tu Rendimiento en Cada Zancada. Encuentra tu Par Perfecto Hoy.</p>
         </div>
     </main>
 
