--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             </section>
             <!--Foto numero DOS-->
             <h3 class="subtituloIzq">Las mejores de todos los tiempos.</h3>
-            <a href="./hombre.html"><img class="imagenGrande" data-aos="fade-down-left" src="../Imagenes/ZapatillasMJ.jpg"  alt="Zapatillas MJ Partido"></a>
+            <div class="contenedorFlexTexto">
+                <a href="./hombre.html"><img class="imagenGrande" data-aos="fade-down-left" src="../Imagenes/ZapatillasMJ.jpg"  alt="Zapatillas MJ Partido"></a>
+            </div>
             <p class="caja textoResponsive">Sumérgete en el legendario mundo del baloncesto con nuestras exclusivas zapatillas inspiradas en la icónica Michael Jordan. Cada paso te conectará con la grandeza que definió una era del deporte. Diseñadas meticulosamente para capturar su estilo distintivo y su habilidad innata, estas zapatillas no solo son un homenaje a la leyenda, sino también una declaración de tu pasión por el juego. <a href="/Paginas/hombre.html">
             <div class="botonCentro">  
                 <button class="botonComprar">Ver mas</button></a>
