--- a/Paginas/hombre.html
+++ b/Paginas/hombre.html
@@ -26,15 +26,13 @@
                 <!--Foto numero UNO-->
                 <img src="../Imagenes/zapatillasJordan.jpg" class="imagenGrande" alt="Zapatillas Jordan">
                 <p class="caja textoResponsive">Domina la cancha con las zapatillas de baloncesto Nike. Diseñadas para desafiar los límites, ofrecen el ajuste perfecto, tracción inigualable y amortiguación superior. Desde cambios rápidos hasta saltos explosivos, Nike te impulsa hacia la victoria en cada partido 
-                <button class="botonComprar">Agregar al carrito</button></p>
             </div>
             <!--Foto numero DOS-->
+            <div class="contenedor">
             <h3 class="subtituloIzq">Brilla en el Campo: Los Botines Dorados de la Victoria.</h3>
+            </div>
             <img src="../Imagenes/BotinesFutbolMessi.jpg" class="imagenMedianaEstatica sombra" alt="Botines Messi">
             <p class="caja textoResponsive">Descubre la excelencia en el campo con nuestros botines dorados, la elección distintiva de Lionel Messi en un emocionante partido. Estos botines encapsulan estilo y rendimiento, brindando un toque de lujo a tu juego. Inspirados por el ícono del fútbol, ofrecen una combinación perfecta de agilidad y precisión. Domina el terreno con el resplandor de la victoria, al igual que Messi en cada zancada.</p>
-            <div class="botonCentro">
-                <button class="botonComprar">Agregar al carrito</button>
-            </div>
             <!--Foto numero TRES-->
             <h3 class="titulo">Leyendas en Confrontación: Michael Jordan vs. LeBron James por el Trono del Basket.</h3>
             <div class="contenedorFlex">
@@ -48,9 +46,6 @@
                 </div>
             </div>
             <p class="caja textoResponsive">Las zapatillas Jordan, conocidas por su legado histórico y estilo audaz, ofrecen un ajuste aerodinámico y una amortiguación receptiva que resalta en la cancha. Con diseños emblemáticos y tecnología de vanguardia, brindan agilidad y apoyo en cada paso.                    Por otro lado, las zapatillas LeBron presentan una fusión de rendimiento y comodidad. Diseñadas para la potencia y la versatilidad de LeBron James, cuentan con amortiguación impactante y soporte lateral para movimientos dinámicos. Estas zapatillas destacan por su adaptabilidad en diversos estilos de juego.       
-            <div class="botonCentro">  
-                <button class="botonComprar">Agregar al carrito</button>
-            </div>
         </main>
         <h2 class="titulo">David Goggins; They don´t know me.</h2>
         <div>
@@ -61,6 +56,11 @@
             <img class="img4" src="../Imagenes/Rangers.jpg" alt="Rangers">
             <img class="img5" src="../Imagenes/maraton.jpg" alt="Maraton">
             </div>
+            <p class="caja textoResponsive">
+            David Goggins es un ex miembro de los SEAL de la Marina de los Estados Unidos, un autor y un orador público. Es conocido por su increíble fuerza física y mental, y por su capacidad para superar los desafíos más difíciles.            
+            Goggins nació en Buffalo, Nueva York, en 1975. Tuvo una infancia difícil, marcada por el abuso físico y emocional. A los 18 años, se unió al ejército de los Estados Unidos como una forma de escapar de su vida.
+            En el ejército, Goggins se convirtió en un atleta de élite. Fue seleccionado para el programa de entrenamiento de los SEAL de la Marina, uno de los programas de entrenamiento militar más difíciles del mundo. Goggins completó el entrenamiento, pero sufrió una lesión en la espalda que casi lo obliga a abandonar.
+            A pesar de su lesión, Goggins continuó su carrera militar. Fue enviado a Irak y Afganistán, donde sirvió en misiones de combate. También se convirtió en un corredor de ultramaratones, completando algunas de las carreras más difíciles del mundo.</p>
         </div>
         <footer class="pieDePag">
             <a href="ayuda.html">Ayuda</a>
