--- a/Paginas/mujer.html
+++ b/Paginas/mujer.html
@@ -33,9 +33,6 @@
                 <img src="../Imagenes/BotinesFutbol.jpg" class="imagenMediana imagenMedianaRedondeada agrandar" alt="Botines de futbol">
             </div>
             <p class="caja mujertexto textoResponsive">Domina el campo con estos botines de fútbol de alto rendimiento en un vibrante color amarillo. Diseñados para destacar en la cancha, estos botines te brindarán el confort y el control que necesitas para brillar en cada jugada.El espíritu de la pasión futbolística se fusiona con el estilo audaz de Boca Juniors en esta edición especial. Imagina cada paso en los colores emblemáticos mientras la imagen de una jugadora del equipo Boca Juniors usa estos botines, sintiendo la energía y la determinación que caracterizan a uno de los equipos más icónicos del fútbol.</p>
-            <div class="botonCentro">
-                <button class="botonComprar">Agregar al carrito</button>
-            </div>
         </div>
         <!--Foto numero DOS, TRES Y CUATRO-->
         <div class="contenedor" data-aos="fade-right" data-aos-once="true">
@@ -46,10 +43,7 @@
                 <img src="../Imagenes/Zapatillas3.jpg" class="imagenMedianaRedondeada imagenMediana" alt="Zapatillas3">
             </div>
             </div>
-            <p class="caja mujertexto textoResponsive">"Las zapatillas que llevaron a David Goggins a conquistar desafíos extremos, ahora te inspirarán en tus propias metas de running."</p>
-            <div class="botonCentro">
-                <button class="botonComprar">Agregar al carrito</button>
-            </div>
+            <p class="caja mujertexto textoResponsive">David Goggins, un ex Navy SEAL y triatleta estadounidense, es considerado por muchos como el "hombre vivo más duro del mundo". En el mundo del running, Goggins ha demostrado su increíble resistencia y fuerza física, completando algunas de las carreras más duras del mundo, como el Ultraman de Hawái y el Campeonato Mundial Ironman de Kona. También batió el récord del mundo de más dominadas (pull-ups) en 24 horas.</p>
         </div>
     </main>
     <section class="ContenedorBorde">   
@@ -66,8 +60,8 @@
             <div class="Tarjeta">
                 <div class="Frente2"></div>
                 <div class="Detras">
-                    <h2>Messi</h2>
-                    <p>Lionel Messi, conocido como "Messi", es un futbolista argentino de renombre mundial. Considerado uno de los mejores jugadores de fútbol de todos los tiempos, ha ganado múltiples títulos y premios, destacando por su habilidad, visión de juego y capacidad goleadora.</p>
+                    <h2>Estefanía Banini</h2>
+                    <p>Estefanía Banini es una futbolista argentina que juega de mediocampista en el Atlético de Madrid de la Primera División Femenina de España. Es considerada como una de las mejores futbolistas del mundo y una de las más importantes en la historia de la selección argentina</p>
                 </div>
             </div>
         </div>
