--- a/index.html
+++ b/index.html
@@ -69,11 +69,30 @@
                 <p class="caja textoResponsive">Recorre Kilómetros con Comodidad y Estilo. Diseñadas para Potenciar tu Rendimiento en Cada Zancada. Encuentra tu Par Perfecto Hoy.</p>
         </div>
     </main>
-
+    <h2 class="titulo">Caminos hacia la Gloria: Capturando la Determinación de Jugadores NBA</h2>
+    <div class="contenedorDeCartas">
+        <div class="zoom"></div>
+        <div class="zoom1"></div>
+        <div class="zoom2"></div>
+        <div class="zoom3"></div>
+        <div class="zoom4"></div>
+        <div class="zoom5"></div>
+        <p class="caja2">El mundo del baloncesto ha sido moldeado por talentos únicos, desde la versatilidad imponente de LeBron James hasta la destreza anotadora de Jayson Tatum. Ja Morant deslumbra con su manejo de balón en el aire, mientras que Shai Gilgeous-Alexander destaca por su elegancia y precisión en cada jugada. Manu Ginóbili trascendió fronteras, siendo un ícono de pasión y dedicación, y el legado de Kobe Bryant perdura como una inspiración eterna, recordándonos la grandeza alcanzada a través del esfuerzo incansable.</p>
+    </div>
+    <h2 class="titulo">Argentina, una fábrica de genios: los mejores jugadores argentinos de la historia</h2>
+    <div class="contenedorDeCartasFutbol">
+        <p class="caja2">Maradona es considerado por muchos como el mejor jugador de la historia, y llevó a Argentina a ganar la Copa del Mundo en 1986. Messi es considerado por muchos como el mejor jugador de todos los tiempos, y ha ganado siete Balones de Oro. Di Stéfano es uno de los más grandes goleadores de todos los tiempos, y ganó el Balón de Oro cinco veces. Kempes fue el héroe de Argentina en la Copa del Mundo de 1978, marcando seis goles en el torneo. Passarella fue un defensa duro y líder, que capitaneó a Argentina a ganar la Copa del Mundo en 1978 y 1986. Riquelme fue un centrocampista creativo y talentoso que brilló en Boca Juniors y Barcelona.</p>
+        <div class="zoom6"></div>
+        <div class="zoom7"></div>
+        <div class="zoom8"></div>
+        <div class="zoom9"></div>
+        <div class="zoom10"></div>
+        <div class="zoom11"></div>
+    </div>
     <!--VIDEO-->
     <div class="contenedorVideo" data-aos="flip-up">
-        <h3 class="subtituloIzq">Top 10 zapatillas de nuestros especialistas.</h3>
-        <iframe class="videoPerso" src="https://www.youtube.com/embed/xvkL9tTx1S4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <h3 class="subtituloIzq">Jugadas de la temporada 2023 de la NBA.</h3>
+        <iframe class="videoPerso" src="https://www.youtube.com/embed/Mpbv5kNYibU?si=1AZsTcyD3knKA4Qr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <footer class="pieDePag">
         <a href="./Paginas/ayuda.html">Ayuda</a>
